--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devDependencies": {
         "@eslint/js": "^9.29.0",
         "eslint": "^8.46.0",
+        "git-commit-msg-linter": "^5.0.4",
         "globals": "^16.2.0",
         "husky": "^8.0.3",
         "lint-staged": "^13.2.3"
