chore: update ESLint configuration and install prettier as dev

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "devDependencies": {
         "@eslint/js": "^9.29.0",
         "eslint": "^8.46.0",
+        "eslint-config-prettier": "^10.1.5",
         "git-commit-msg-linter": "^5.0.4",
         "globals": "^16.2.0",
         "husky": "^8.0.3",
-        "lint-staged": "^13.2.3"
+        "lint-staged": "^13.2.3",
+        "prettier": "^3.6.1"
     }
 }
