fix: add conventional commits formats

--- a/package.json
+++ b/package.json
@@ -5,20 +5,28 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "echo \"No tests specified yet\"",
         "postinstall": "npx husky install"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@commitlint/cli": "^17.8.1",
+        "@commitlint/config-conventional": "^17.8.1",
         "@eslint/js": "^9.29.0",
         "eslint": "^8.46.0",
         "eslint-config-prettier": "^10.1.5",
-        "git-commit-msg-linter": "^5.0.4",
         "globals": "^16.2.0",
         "husky": "^8.0.3",
         "lint-staged": "^13.2.3",
         "prettier": "^3.6.1"
+    },
+    "lint-staged": {
+        "*.{js,json,css,md}": [
+            "prettier --write",
+            "eslint --fix",
+            "git add"
+        ]
     }
 }
