--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
             "eslint --fix",
             "git add"
         ]
+    },
+    "dependencies": {
+        "dotenv": "^16.3.1",
+        "express": "^5.1.0",
+        "pg": "^8.11.2"
     }
 }
