--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
         ]
     },
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "dotenv": "^16.3.1",
         "express": "^5.1.0",
-        "pg": "^8.11.2"
+        "pg": "^8.11.2",
+        "uuid": "^9.0.0"
     }
 }
