--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "test": "echo \"No tests specified yet\"",
         "postinstall": "npx husky install",
-        "migrations": "node src/db/postgres/migrations/exec.js"
+        "migrations": "node src/db/postgres/migrations/exec.js",
+        "start:dev": "node --watch index.js"
     },
     "keywords": [],
     "author": "",
@@ -35,6 +36,7 @@
         "dotenv": "^16.3.1",
         "express": "^5.1.0",
         "pg": "^8.11.2",
-        "uuid": "^9.0.0"
+        "uuid": "^9.0.0",
+        "validator": "^13.11.0"
     }
 }
